This file documents the revision history for UFL::Phonebook.

0.41
        - Handle uppercase usernames in show.cgi redirects (#126)
        - Make Google Analytics a configuration option
        - Move to shared favicon asset

0.40  Fri Jul 30 12:18:43 EDT 2010
        - Handle escaped query strings in show.cgi redirects (#120)

0.39  Mon Jul  5 12:06:46 EDT 2010
        - Remove wildcard at front for short query terms because it
          hurts LDAP
        - Add ability to add specific IP addresses to throttle list
        - Reduce maximum number of queries per hour to 900

0.38  Mon Jun 21 15:24:07 EDT 2010
        - Fix CSS on error page
        - Add Catalyst::Plugin::ErrorCatcher

0.37  Thu Jun  3 15:03:32 EDT 2010
        - Add mappings of affiliation codes for display
        - Add page to display request environment

0.36  Wed Jun  2 16:07:17 EDT 2010
        - Add request throttling to BaseController (#95)
        - Update authentication to make better use of Shibboleth

0.35  Fri Mar  5 09:47:00 EST 2010
        - Update to latest version of Catalyst scripts
        - Make default font size more normal
        - Explicitly set a default KRB5CCNAME for the application to
          avoid conflicts with the Kerberos default
        - Refactor common CSS to a separate file to have defaults
          apply better
        - Add an about page
        - Add search box to all pages but the home page

0.34  Wed Aug 12 14:51:22 EDT 2009
        - Remove sessions for authentication so that users don't
          appear logged in to the public instance
        - Add Google Analytics

0.33  Mon Aug 10 16:35:11 EDT 2009
        - Switch to shared location for search behavior scripts

0.32  Thu Aug  6 17:48:20 EDT 2009
        - Fix vCard downloads for people who don't have fields like
          'uid' (#50)
        - Improve name sorting to use surname and given name instead
          of relying on the common name, due to inconstencies in