@@ -4,6 +4,7 @@ This file documents the revision history for UFL::Phonebook.
         - Handle uppercase usernames in show.cgi redirects (#126)
         - Make Google Analytics a configuration option
         - Move to shared favicon asset
+        - Fix string equality test in ::Filter::Abstract for Perl 5.12
 
 0.40  Fri Jul 30 12:18:43 EDT 2010
         - Handle escaped query strings in show.cgi redirects (#120)
